<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general values -->
    <string name="web_module_redirecting_for_download">Redirecting For Download</string>
    <string name="OK">OK</string>
    <string name="form_module_action_send">Send</string>
    <string name="notification_dialog_positive_button">Show Details</string>
    <string name="common_error">Sorry, something went wrong. Please try again later</string>
    <string name="yes">Yes</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="failed">Failed</string>
    <string name="cancel">Cancel</string>

    <string name="please_check_your_stream_link">Your stream link is broken or not supported stream format.</string>

    <!-- Content Description -->

    <string name="remove">Remove</string>


    <!-- SSL error handling msg -->
    <string name="time_just_now">Just now</string>
    <string name="time_a_minute_ago">1 minute ago</string>
    <string name="time_minute_ago">minute ago</string>
    <string name="time_an_hour_ago">1 hour ago</string>
    <string name="time_hours_ago">hours ago</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_a_week_ago">1 week ago</string>
    <string name="time_weeks_ago">weeks ago</string>
    <string name="time_a_month_ago">1 month ago</string>
    <string name="time_months_ago">months ago</string>
    <string name="time_a_year_ago">1 year ago</string>
    <string name="time_years_ago">years ago</string>
    <string name="time_day_ago">1 day ago</string>
    <string name="time_days_ago">days ago</string>
    <string name="action_share">Share</string>
    <string name="action_more">Read More</string>
    <string name="action_download">Download</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="favorite_not_found">No record found</string>
    <string name="action_close_app">Are you sure you want to exit?</string>
    <string name="feedback_sent">Your feedback has been sent.</string>

    <!-- Rating dialog -->
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_remind_later">Remind me later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_suggestions">Tell us how we can improve?</string>
    <string name="change_language">Change Language</string>
    <string name="app_notifications">Notifications</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="unknown">Unknown</string>

    <!-- Preview login & app list strings -->
    <string name="app_version">App Version</string>
    <string name="settings_saved">Your settings saved.</string>

    <!-- Splash text -->
    <string name="not_supported_on_preview">This feature not supported on Preview App, please generate APK file and install on your device.</string>
    <string name="advertisement">Advertisement</string>
    <string name="ad">Ad</string>

    <!-- Connection Required strings -->
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="mobile_settings">Mobile Data</string>
    <string name="try_again">Try Again</string>
    <string name="connection_required_error">No internet connection</string>


    <!-- Form -->
    <string name="required_field">Required field</string>
    <string name="success">Success</string>
    <string name="form_success">Form successfully submitted.</string>
    <string name="form_failed">Form could not be sent.</string>
    <string name="send_email">Send Email</string>

    <string name="make_a_choice">Please make a choice</string>
    <string name="select_a_date">Please select a date</string>
    <string name="select_a_time">Please select a time</string>
    <string name="text_validation_message">Please fill in this field</string>

    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Normal</string>
    <string name="text_size_big">Big</string>
    <string name="text_size_very_big">Very Big</string>
    <string name="application_restart_info">The application will restart to apply new changes</string>
    <string name="change_font_size">Font Size</string>
    <string name="content_change_font_size">Change Content Font Size</string>
    <string name="image_size_validation">Image size can not be greater than 2,5 MB</string>
    <string name="logout_dialog">Are you sure you want to logout ?</string>

    <string-array name="text_size_list">
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
        <item>Very Big</item>
    </string-array>

    <string name="no_message_available">No message available</string>

    <string name="new_report_push">New report created.</string>
    <string name="ban_push">You have been blocked from chat by the application authority.</string>
    <string name="unban_push">You have been unblocked from chat by the application authority.</string>
    <string name="authority_push">You have been assigned authority.</string>
    <string name="authority_revoke_push">Your authorization has been revoked.</string>
    <string name="firebase_validation_failed">Chat settings validation failed.</string>

    <string name="permission_storage_denied_download">You will not be able to download the file without storage permission.</string>
    <string name="permission_storage_denied_download_never">You will not be able to download the file without storage permission. This permission can be activated from settings section.</string>
    <string name="permission_storage_denied_ss">You will not be able to take a screenshot without storage permission.</string>
    <string name="permission_storage_denied_ss_never">You will not be able to take a screenshot without storage permission. This permission can be activated from settings section.</string>
    <string name="permission_location_denied_map_user_location">You will not be able to see your location without location permission.</string>
    <string name="permission_location_denied_map_user_location_never">You will not be able to see your without location permission. This permission can be activated from settings section.</string>
    <string name="permission_location_denied_webview_user_location_never">Some features may not be available without location permission. This permission can be activated from settings section.</string>


    <string name="permission_settings">Go to Permissions</string>
    <string name="permission_required">Permission Required!</string>
    <string name="permission_required_description">%1$s application needs Storage permission to store your personal data on your device, to ensure the highest level of application performance with minimal file transfer. In order to use the application, you need to have access to this permission. It is completely safe to enable this access.</string>

    <string name="action_search">Search</string>

    <string name="action_save">Save</string>

    <string name="notification_music">Music Channels</string>

    <string name="channel_detail_description">Description</string>


    <string name="user_agreement_settings">User Agreement</string>

    <string name="in_app_purchase_not_available">In app purchase feature not available on this device, make sure you installed latest version of Google Play Store</string>

    <string name="in_app_purchase_subscription">Subscription</string>
    <string name="in_app_purchase_one_payment">Single Payment</string>
    <string name="in_app_purchase_life_time">Lifetime</string>
    <string name="in_app_purchase_more_information">More Information</string>
    <string name="in_app_purchase_buy_it">Buy It</string>
    <string name="in_app_purchase_more">More</string>

    <string name="in_app_purchase_period_month">%1$s Month</string>
    <string name="in_app_purchase_period_week">%1$s Week</string>
    <string name="in_app_purchase_period_yearly">Annual</string>

    <string name="in_app_purchase_title">In-App Purchase</string>
    <string name="in_app_purchase_description">You can see the details by selecting one of these options, and you can pay</string>

    <string name="info_module_not_supported_on_preview">%1$s module not supported on Preview App</string>
    <string name="chat_module">Chat</string>
    <string name="ecommerce_module">E-commerce</string>

    <string name="chat_action_invalid_account">This account not suitable for chat feature</string>


    <string name="field_required">%s is required</string>

    <string name="pdf_version_message">This content is not supported on devices under Android version 5 (Lollipop). Click "OK" to download the content in PDF format.</string>
    <string name="locale">en</string>


    <string name="e_commerce_dialog_negative_button">No, not now.</string>

</resources>