<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/overlay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/setting_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/language_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_language"
                    android:textAppearance="@android:style/TextAppearance.Holo"
                    android:textSize="?attr/font_16" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end">

                    <TextView
                        android:id="@+id/language_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="?attr/font_15"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/text_size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_font_size"
                    android:textAppearance="@android:style/TextAppearance.Holo"
                    android:textSize="?attr/font_16" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end">

                    <TextView
                        android:id="@+id/text_size_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="?attr/font_15"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black" />

            <Switch
                android:id="@+id/notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/app_notifications"
                android:textSize="?attr/font_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black" />

            <Switch
                android:id="@+id/notification_sound_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/notification_sound"
                android:textSize="?attr/font_16" />

            <View
                android:id="@+id/user_agreement_view_layout"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/user_agreement_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_agreement_settings"
                    android:textAppearance="@android:style/TextAppearance.Holo"
                    android:textSize="?attr/font_16" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/app_version_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_version"
                    android:textAppearance="@android:style/TextAppearance.Holo"
                    android:textSize="?attr/font_16" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end">

                    <TextView
                        android:id="@+id/app_version_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="?attr/font_15"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/black" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>