<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connection_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>

    <androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:gravity="center_horizontal"
                                                   android:paddingBottom="15dp"
                                                   android:paddingStart="15dp"
                                                   android:paddingEnd="15dp">

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:id="@+id/connection_image_layout"
            android:layout_width="match_parent"
            app:layout_heightPercent="50%">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                app:layout_heightPercent="80%"
                android:padding="@dimen/buttonPadding"
                app:srcCompat="@drawable/ic_perm_scan_wifi_white_48dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_below="@id/imageView2"
                android:gravity="center"
                android:textSize="?attr/font_14"
                android:text="@string/connection_required_error"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_heightPercent="20%"/>
        </androidx.percentlayout.widget.PercentRelativeLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/connection_image_layout"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                />

            <Button
                android:id="@+id/wifi_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:drawableStart="@drawable/network_check"
                android:drawablePadding="2dp"
                android:text="@string/wifi_settings"
                android:textSize="?attr/font_14"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                />

            <Button
                android:id="@+id/mobile_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:drawableStart="@drawable/mobile_check"
                android:drawablePadding="2dp"
                android:textAllCaps="false"
                android:textSize="?attr/font_14"
                android:text="@string/mobile_settings"
                android:textColor="@color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="?attr/font_14"
            android:background="@color/transparent"
            android:drawableTop="@drawable/refresh_icon"
            android:shadowRadius="2"
            android:text="@string/try_again"
            android:textColor="@color/white"/>

    </androidx.percentlayout.widget.PercentRelativeLayout>
</LinearLayout>